[tool.poetry]
name = "aski-angel-bot"
version = "0.1.0"
description = "A Telegram learning bot with group-specific personalities."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyrogram = "^2.0.106" # Updated to a recent stable Pyrogram 2.x version
pymongo = "^4.8.0"
flask = "^3.0.3"
requests = "^2.32.3" # To ping self for keep-alive

[tool.poetry.dev-dependencies]
pytest = "^8.2.2" # Example dev dependency

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
